@@ -2,7 +2,7 @@ DIST font-arial-cp1250.tar.bz2 249705 RMD160 a2fc7ae07b0d80936ea58e168e1047efccb
 DIST font-arial-iso-8859-1.tar.bz2 234242 RMD160 666697cd5efd9387057a898c714175e7c2aacbcd SHA1 152c40bf20de34aa8802d7f80d34d673b0b67212 SHA256 9730f481764f367c9089d0166fb6ccf9148808ffbbfeca635cf0e6db75765d29
 DIST font-arial-iso-8859-2.tar.bz2 222208 RMD160 562d4d92c4f5f3d537340fde3ad8d1495ac41acb SHA1 7b99bbe0e9ba89a57eccbea8f93c453c4f268181 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1
 DIST mplayer2-build-2.0.tar.xz 7424672 RMD160 48193cf6a48e16cce7f74d8f0915e64dc4b7d1cd SHA1 951bc88cdaa486044a32e66293bdcb5bfd17f759 SHA256 e0a4dba087ba8c6a916d8bc9c7063bd2fd86d36bb08e31a2bd2d82e56b3c4058
-EBUILD mplayer2-2.0.ebuild 21469 RMD160 841a70d96991c164bb3ee97ff05ad33fbb7a9448 SHA1 0ff64aea911fce9d395f48b738cbbf4dff2670a3 SHA256 564f1b642f94c7b7c24f5dbbeb6d96eded17f979108031d1876d358dc7aef842
-EBUILD mplayer2-9999.ebuild 21161 RMD160 5c449f3355ae6eaa33bd8510d896cf8bd4e5d134 SHA1 9681f995f25f6cf5668ada4e57a1a6dcd82efc72 SHA256 2e170906291791eab76360f39a036541d1b4e5fc296c73ac195d98d84af98e45
-MISC ChangeLog 3762 RMD160 64531d4d5a4d4c5f9b27f20a3c06b3481eb13901 SHA1 d8790a1f658d59c4145da23de9edb0a078b3f89b SHA256 96f99b5c9b647ade1fe63d6877065cf6d32751e3ed1616ac5298b1f03f5aa31f
-MISC metadata.xml 4615 RMD160 fbbe61ad706426110559f11c1f00bd631393cdf3 SHA1 32536f2414312804b03686dded9599c64fbb5e03 SHA256 707b322a38f938eda494e836b5153294c7b34ac4d6adb3af08a141742e0a0305
+EBUILD mplayer2-2.0.ebuild 17205 RMD160 30129af7911818490f0438cad7315a7a15dfdfe1 SHA1 b583e596f5248c6315f4c772612864d4e680fea5 SHA256 cb90329d2b10897d98cd562358debdcf478b8f5d76d007f0d42effa807187952
+EBUILD mplayer2-9999.ebuild 16830 RMD160 a1c80c46b45216fb600d58646da744c158be0625 SHA1 66d85bfdfa8082e82d00b21767a7168f777fecc1 SHA256 55ea821642b59a89d5814064fae4f9f26e7afcaaa20f22c3997b119724fe16f8
+MISC ChangeLog 3913 RMD160 2270abe9c7c0df5368ac0e34af7167d12c60e6c0 SHA1 da8e7fa5b5acd6a725ebe13b462905455761e2c4 SHA256 3095255f11bd78fe4f36f7dd570cd46fbf5f4f518ff47c605ddcbe2aa14e6efa
+MISC metadata.xml 4303 RMD160 aa30a51be8942f3d80ff80d42e3934a7e1920478 SHA1 c0c293597dc58ad3456fcbb6c24de25c525e4d74 SHA256 aef18d91c7eae2e8ae5be389d071a51723ac1c8f11d95d1c55fd0777125ddff1
